--- a/index.html
+++ b/index.html
@@ -5564,7 +5564,7 @@
 
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('./sw.js').catch((error) => {
+                navigator.serviceWorker.register('/sw.js').catch((error) => {
                     console.error('Error registrando el Service Worker:', error);
                 });
             });
