Revert "Fix sync indicator priority to avoid misleading 'Sin conexión' on permanent failures"

--- a/index.html
+++ b/index.html
@@ -3661,11 +3661,7 @@
             if(!indicator)return;
             const pendingItems=offlineQueue.filter(item=>item.status!=='synced');
             const failedItems=pendingItems.filter(item=>item.status==='failed');
-            const status=statusOverride || (isSyncingOfflineQueue
-                ? 'syncing'
-                : (failedItems.length
-                    ? 'failed'
-                    : (!navigator.onLine ? 'offline' : 'online')));
+            const status=statusOverride || (!navigator.onLine ? 'offline' : (isSyncingOfflineQueue ? 'syncing' : (failedItems.length ? 'failed' : 'online')));
             indicator.className=`sync-indicator ${status}`;
             if(text){
                 text.textContent=status==='online'
@@ -3685,9 +3681,7 @@
                 retry.disabled=isSyncingOfflineQueue;
             }
             if(notice){
-                if(failedItems.length){
-                    notice.textContent='Hay elementos con error permanente. Corrige el problema (sesión/permisos/reglas) y pulsa "Reintentar".';
-                }else if(!navigator.onLine && pendingItems.length){
+                if(!navigator.onLine && pendingItems.length){
                     notice.textContent='Guardado local. Se sincronizará al reconectar.';
                 }else if(failedItems.length){
                     notice.textContent='Hay elementos con error permanente. Corrige el problema (sesión/permisos/reglas) y pulsa "Reintentar".';
